Fix display on small devices

--- a/src/home/Home.scss
+++ b/src/home/Home.scss
@@ -3,6 +3,5 @@
     text-decoration: underline;
     text-decoration-color: var(--bs-primary);
     text-decoration-thickness: 5px;
-    white-space: nowrap;
     font-family: 'MonaspaceRadon';
 }
